--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap');
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Bodoni Moda', serif;
 }
 .description {
   text-align: center;
